--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ btbge vid`
       <!--/row-->
     </section>
     <section class="container-fluid" id="section3">
-      <div class="row">
+      <!-- <div class="row">
         <div class="mainDisplay">
           <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-2 col-lg-offset-2 col-lg-4">
             <ul class = "mainPic">
@@ -152,8 +152,8 @@ btbge vid`
           </div>
           <div class="row">
             <div class="thumbs">
-              <div class = "col-xs-0 col-sm-0 col-md-0 col-lg-0"></div>
-              <?php
+              <div class = "col-xs-0 col-sm-0 col-md-0 col-lg-0"></div> -->
+              <!-- <?php
               while($rowPortfolio = $resultPortfolio->fetch_assoc()){
                 $itemCount++;
                 if($itemCount <= 3){
@@ -201,8 +201,8 @@ btbge vid`
                   echo "</div>";
                 }
               }
-              ?>
-            </div>
+              ?> -->
+<!--             </div>
           </div>
           <div class="text-center">
             <ul class="pagination" style="margin-top: -10px;">
@@ -212,10 +212,12 @@ btbge vid`
             </ul>
           </div>
         </div>
-        <!--/row-->
+        <!-- /row-->
       </div>
-      <!--/container-->
+      <!--/container--> -->
     </section>
+
+
     <section class="container-fluid" id="section4">
       <h1 class="text-center coolvetica elegantshadow">My CV</h1>
       <div class="row">
@@ -230,6 +232,8 @@ btbge vid`
         </div>
       </div>
     </section>
+
+
     <section id="section5">
       <div class="container v-center">
         <div class="row">
@@ -278,9 +282,9 @@ btbge vid`
           </div>
         </div>
       </div>
-    </section>
+<!--     </section>
     <section class="container-fluid" id="section6">
-    </section>
+    </section> -->
     <section class="container-fluid" id="section7">
       <ul class="row list-unstyled">
         <li class="col-md-12 col-xs-12">
@@ -312,7 +316,7 @@ btbge vid`
       </div>
     </section>
     <footer id="footer">
-      <div class="container">
+     <!--  <div class="container">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-3 column">
             <h4>Information</h4>
@@ -364,8 +368,8 @@ btbge vid`
                 <a href="#">Support</a>
               </li>
             </ul>
-          </div>
-          <div class="col-xs-6 col-md-3 column">
+          </div> -->
+<!--           <div class="col-xs-6 col-md-3 column">
             <h4>Customer Service</h4>
             <ul class="nav">
               <li>
@@ -381,11 +385,10 @@ btbge vid`
                 <a href="#">Terms &amp; Conditions</a>
               </li>
             </ul>
-          </div>
-        </div>
-        <!--/row-->
-        <p class="text-right">© Luke Melville
-          <?php echo date( "Y"); ?>
+          </div> -->
+<!--         </div>
+ -->        <!--/row-->
+        <p class="text-right">© Luke Melville 2017
         </p>
       </div>
     </footer>
@@ -430,7 +433,7 @@ btbge vid`
           </div>
         </div> -->
 
-        
+
         <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal2" role="dialog" tabindex="-1">
           <div class="modal-dialog">
             <div class= "modal-content" id = "myModalContent2" >
