Tried to fix end

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ btbge vid`
           <li>
             <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
           </li>
-          <li>
+<!--           <li>
             <a data-text="Another" class  = "button-hover" href="#section6">Another</a>
-          </li>
+          </li> -->
           <li>
-            <a data-text="Bottom" class  = "button-hover"  href="#section7">Bottom</a>
+            <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
           </li>
           <li>&nbsp;</li>
         </ul>
@@ -282,17 +282,18 @@ btbge vid`
           </div>
         </div>
       </div>
-<!--     </section>
+	</section>
+<!-- 	
     <section class="container-fluid" id="section6">
-    </section> -->
-    <section class="container-fluid" id="section7">
+    </section> --> -->
+    <section class="container-fluid" id="section6">
       <ul class="row list-unstyled">
         <li class="col-md-12 col-xs-12">
           <h3 class="text-center">Thank you for stopping by!</h3>
         </li>
       </ul>
     </section>
-    <section class="container-fluid" id="section8">
+    <section class="container-fluid" id="section7">
       <div class="row">
         <!--fontawesome icons-->
         <div class="col-sm-1 col-sm-offset-3 col-xs-4 text-center">
