--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ btbge vid`
           navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
         </button> <a class="navbar-brand" href="#">Lm</a>
       </div>
+
       <div class="navbar-collapse collapse" id="navbar-collapsible">
         <ul class="nav navbar-nav navbar-left">
           <li>
@@ -51,9 +52,6 @@ btbge vid`
           <li>
             <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
           </li>
-<!--           <li>
-            <a data-text="Another" class  = "button-hover" href="#section6">Another</a>
-          </li> -->
           <li>
             <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
           </li>
@@ -65,6 +63,7 @@ btbge vid`
           </li>
         </ul>
       </div>
+      
     </div>
   </nav>
   <section class="container-fluid" id="section1">
@@ -116,6 +115,8 @@ btbge vid`
       </div>
       <!--/row-->
     </section>
+
+
     <section class="container-fluid" id="section3">
       <!-- <div class="row">
         <div class="mainDisplay">
@@ -212,10 +213,10 @@ btbge vid`
             </ul>
           </div>
         </div>
-        <!-- /row-->
+         /row
       </div>
-      <!--/container--> -->
-    </section>
+      </container-->    
+       </section>
 
 
     <section class="container-fluid" id="section4">
@@ -389,7 +390,7 @@ btbge vid`
           </div> -->
 <!--         </div>
  -->        <!--/row-->
-        <p class="text-right">© Luke Melville 2017
+        <p class="text-center">© Luke Melville 2017
         </p>
       </div>
     </footer>
@@ -435,7 +436,7 @@ btbge vid`
         </div> -->
 
 
-        <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal2" role="dialog" tabindex="-1">
+<!--         <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal2" role="dialog" tabindex="-1">
           <div class="modal-dialog">
             <div class= "modal-content" id = "myModalContent2" >
               <div class="modal-header" id = "myModalHeader2">
@@ -451,7 +452,7 @@ btbge vid`
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
 
         <!--scripts loaded here-->
