--- a/TESTHTML5BUILD/index.html
+++ b/TESTHTML5BUILD/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Bacteria Builder</title>
+    <title>Bacteria Builder</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
@@ -15,10 +15,6 @@
   <body>
     <div class="webgl-content">
       <div id="gameContainer" style="width: 1280px; height: 720px"></div>
-      <div class="footer">
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Bacteria Builder</div>
-      </div>
     </div>
   </body>
 </html>
