--- a/AMP/index.html
+++ b/AMP/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | STA Visual Mapping Project</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/2.3a.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/AMP.json");
     </script>
   </head>
   <body>
