--- a/AMP/index.html
+++ b/AMP/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | STA Visual Mapping Project</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/AMP_2.5b.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/AMP_3.0_WATCH_COMP.json");
     </script>
   </head>
   <body>
