Replaced File Structure - Test if still works in local and Host

--- a/index.html
+++ b/index.html
@@ -17,107 +17,108 @@ btbge vid`
 <meta charset="utf-8">
 <title>Luke Melville</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/font-awesome.min.css" rel="stylesheet">
-<link href="/css/animate.min.css" rel="stylesheet">
-<link href="/css/styles.css" rel="stylesheet">
-<link href="/css/index.css" rel="stylesheet">
-<link href="/css/about.css" rel="stylesheet">
-<link href="/css/fonts.css" rel="stylesheet">
-<link href="/css/hover.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/font-awesome.min.css" rel="stylesheet">
+<link href="css/animate.min.css" rel="stylesheet">
+<link href="css/styles.css" rel="stylesheet">
+<link href="css/index.css" rel="stylesheet">
+<link href="css/about.css" rel="stylesheet">
+<link href="css/fonts.css" rel="stylesheet">
+<link href="css/hover.css" rel="stylesheet">
 </head>
+
 <body>
   <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" data-target="#navbar-collapsible" data-toggle="collapse" type="button"><span class="sr-only">Toggle
-          navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-        </button> <a class="navbar-brand" href="#">Lm</a>
-      </div>
-
-      <div class="navbar-collapse collapse" id="navbar-collapsible">
-        <ul class="nav navbar-nav navbar-left">
-          <li>
-            <a data-text="Top" class  = "button-hover" href="#section1">Top</a>
-          </li>
-          <li>
-            <a data-text="About" class  = "button-hover" href="#section2">About</a>
-          </li>
-          <li>
-            <a data-text="Portfolio" class  = "button-hover"  href="#section3">Portfolio</a>
-          </li>
-          <li>
-            <a data-text="CV" class  = "button-hover"  href="#section4">CV</a>
-          </li>
-          <li>
-            <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
-          </li>
-          <li>
-            <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
-          </li>
-          <li>&nbsp;</li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a data-target="#myModal" data-toggle="modal" href="#"><i class="ion-gear-a"></i></a>
-          </li>
-        </ul>
-      </div>
-      
+        navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+      </button> <a class="navbar-brand" href="#">Lm</a>
     </div>
-  </nav>
-  <section class="container-fluid" id="section1">
-    <div class="v-center">
-      <h1 class="text-center" id="logo">Luke Melville</h1>
-      <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
-        Games Software Developer</h2>
-        <p class="text-center">
-          <br>
-        </p>
-      </div>
-      <a href="#section2">
-        <div class="scroll-down bounceInDown animated">
-          <span><i class="fa fa-angle-down fa-2x"></i></span>
-        </div>
-      </a>
-    </section>
-    <section class="container-fluid" id="section2">
-     <div class="about-me">
-      <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-          <h2 class = "elegantshadow">About</h2>
-          <div class="hovereffect">
-            <div class="img-circle img-responsive overlay">
-              <p>
-                <a href="https://www.linkedin.com/in/luke-melville-9aba00118" target = "_blank" rel="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a>
-                <a href="https://www.facebook.com/Lukiemelville" target = "_blank" rel="tooltip" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
-                <a href="https://twitter.com/lukemev" target = "_blank" rel="tooltip" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
-                <a href="https://open.spotify.com/user/aapio" target = "_blank" rel="tooltip" title="Spotify"><i class="fa fa-spotify fa-2x"></i></a>
-              </div>
-              <img id = "aboutPic" class="img-circle img-responsive" src="/images/aboutMe.jpg">
-            </div>
+
+    <div class="navbar-collapse collapse" id="navbar-collapsible">
+      <ul class="nav navbar-nav navbar-left">
+        <li>
+          <a data-text="Top" class  = "button-hover" href="#section1">Top</a>
+        </li>
+        <li>
+          <a data-text="About" class  = "button-hover" href="#section2">About</a>
+        </li>
+        <li>
+          <a data-text="Portfolio" class  = "button-hover"  href="#section3">Portfolio</a>
+        </li>
+        <li>
+          <a data-text="CV" class  = "button-hover"  href="#section4">CV</a>
+        </li>
+        <li>
+          <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
+        </li>
+        <li>
+          <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
+        </li>
+        <li>&nbsp;</li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a data-target="#myModal" data-toggle="modal" href="#"><i class="ion-gear-a"></i></a>
+        </li>
+      </ul>
+    </div>
+    
+  </div>
+</nav>
+<section class="container-fluid" id="section1">
+  <div class="v-center">
+    <h1 class="text-center" id="logo">Luke Melville</h1>
+    <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
+    Games Software Developer</h2>
+    <p class="text-center">
+      <br>
+    </p>
+  </div>
+  <a href="#section2">
+    <div class="scroll-down bounceInDown animated">
+      <span><i class="fa fa-angle-down fa-2x"></i></span>
+    </div>
+  </a>
+</section>
+<section class="container-fluid" id="section2">
+ <div class="about-me">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+      <h2 class = "elegantshadow">About</h2>
+      <div class="hovereffect">
+        <div class="img-circle img-responsive overlay">
+          <p>
+            <a href="https://www.linkedin.com/in/luke-melville-9aba00118" target = "_blank" rel="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a>
+            <a href="https://www.facebook.com/Lukiemelville" target = "_blank" rel="tooltip" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
+            <a href="https://twitter.com/lukemev" target = "_blank" rel="tooltip" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
+            <a href="https://open.spotify.com/user/aapio" target = "_blank" rel="tooltip" title="Spotify"><i class="fa fa-spotify fa-2x"></i></a>
           </div>
-                  <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-          <p>Hi I'm Luke! I am a <a target="_blank" href = "http://www.shu.ac.uk/prospectus/course/800/">MComp Games Software Development</a>
-            Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and also Counter Strike: Global offensive, at the moment. <br> My programming skills are primarily based around C++, however i am also proficient in C#, Javascript, PHP, HTML, SQL, Vpython and VB.net. To see some of my work, please visit my Portfolio section. I have included a contact form so feel free to contact me, or add me on steam. If you would like to view any source code, also send me an email.<br>
-            Regards,<br><br>
-            <span id = sig>Luke</span></p>
-          </div>
+          <img id = "aboutPic" class="img-circle img-responsive" src="images/aboutMe.jpg">
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-3 col-md-offset-2 col-lg-3 col-lg-offset-2">
-          <img id = "steam" class = "img-responsive" src='/images/Aapio.png' style='border: 1px solid black;'>
-        </div>
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-4 col-lg-4 ">
-          <img  id = "bf3" class = "img-responsive" src="/images/AapioBF3.png">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+        <p>Hi I'm Luke! I am a <a target="_blank" href = "http://www.shu.ac.uk/prospectus/course/800/">MComp Games Software Development</a>
+          Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and also Counter Strike: Global offensive, at the moment. <br> My programming skills are primarily based around C++, however i am also proficient in C#, Javascript, PHP, HTML, SQL, Vpython and VB.net. To see some of my work, please visit my Portfolio section. I have included a contact form so feel free to contact me, or add me on steam. If you would like to view any source code, also send me an email.<br>
+          Regards,<br><br>
+          <span id = sig>Luke</span></p>
         </div>
       </div>
-      <!--/row-->
-    </section>
+    </div>
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-3 col-md-offset-2 col-lg-3 col-lg-offset-2">
+        <img id = "steam" class = "img-responsive" src='images/Aapio.png' style='border: 1px solid black;'>
+      </div>
+      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-4 col-lg-4 ">
+        <img  id = "bf3" class = "img-responsive" src="images/AapioBF3.png">
+      </div>
+    </div>
+    <!--/row-->
+  </section>
 
 
-    <section class="container-fluid" id="section3">
+  <section class="container-fluid" id="section3">
       <!-- <div class="row">
         <div class="mainDisplay">
           <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-2 col-lg-offset-2 col-lg-4">
@@ -215,75 +216,75 @@ btbge vid`
         </div>
          /row
       </div>
-      </container-->    
-       </section>
+    </container-->    
+  </section>
 
 
-    <section class="container-fluid" id="section4">
-      <h1 class="text-center coolvetica elegantshadow">My CV</h1>
+  <section class="container-fluid" id="section4">
+    <h1 class="text-center coolvetica elegantshadow">My CV</h1>
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3 class="cvDesc text-center lato slideInUp animate coolvetica">Feel Free to <a href="/portfolio/LukeMelville-CV.docx">Download.</a></h3>
+        <br>
+        <br>
+        <p class="text-center">
+          <button id="flip" class="btn btn-custom coolvetica" type="submit">Click to Toggle CV</button>
+          <iframe id = "panel" class="embedCV embed-responsive-item" src="https://drive.google.com/file/d/0B0dQEcp32X2eOW5pUkM4MlVXR1U/preview"></iframe>
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section id="section5">
+    <div class="container v-center">
       <div class="row">
-        <div class="col-sm-10 col-sm-offset-1">
-          <h3 class="cvDesc text-center lato slideInUp animate coolvetica">Feel Free to <a href="/portfolio/LukeMelville-CV.docx">Download.</a></h3>
-          <br>
-          <br>
-          <p class="text-center">
-            <button id="flip" class="btn btn-custom coolvetica" type="submit">Click to Toggle CV</button>
-            <iframe id = "panel" class="embedCV embed-responsive-item" src="https://drive.google.com/file/d/0B0dQEcp32X2eOW5pUkM4MlVXR1U/preview"></iframe>
-          </p>
+        <div class="col-md-12">
+          <h1 class="text-center elegantshadow">Make Contact</h1>
+          <hr>
         </div>
       </div>
-    </section>
-
-
-    <section id="section5">
-      <div class="container v-center">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center elegantshadow">Make Contact</h1>
-            <hr>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-1">
+          <div class="row form-group">
+            <div class="col-sm-5">
+              <input class="form-control" id="firstName" name="firstName" placeholder="First Name" required="" type="text">
+            </div>
+            <div class="col-sm-5">
+              <input class="form-control" id="lastName" name="lastName" placeholder="Last Name" required="" type="text">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-sm-5">
+              <input class="form-control" name="email" placeholder="Email" required="" type="email">
+            </div>
+            <div class="col-sm-5">
+              <input class="form-control" name="phone" placeholder="Phone" required="" type="email">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-sm-10">
+              <input class="form-control" placeholder="Website URL" required="" type="homepage">
+            </div>
+          </div>
+          <div class="row form-group">
+            <div class="col-sm-10">
+              <button class="btn btn-default btn-lg pull-right">UNDER CONSTRUCTION
+              </button>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-8 col-md-offset-1">
-            <div class="row form-group">
-              <div class="col-sm-5">
-                <input class="form-control" id="firstName" name="firstName" placeholder="First Name" required="" type="text">
-              </div>
-              <div class="col-sm-5">
-                <input class="form-control" id="lastName" name="lastName" placeholder="Last Name" required="" type="text">
-              </div>
-            </div>
-            <div class="row form-group">
-              <div class="col-sm-5">
-                <input class="form-control" name="email" placeholder="Email" required="" type="email">
-              </div>
-              <div class="col-sm-5">
-                <input class="form-control" name="phone" placeholder="Phone" required="" type="email">
-              </div>
-            </div>
-            <div class="row form-group">
-              <div class="col-sm-10">
-                <input class="form-control" placeholder="Website URL" required="" type="homepage">
-              </div>
-            </div>
-            <div class="row form-group">
-              <div class="col-sm-10">
-                <button class="btn btn-default btn-lg pull-right">UNDER CONSTRUCTION
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 pull-right">
-            <address>
-            </address>
-            <address>
-              <strong>Email Me</strong><br>
-              <a href="mailto:#">contact@lukemelville.com</a>
-            </address>
-          </div>
+        <div class="col-md-3 pull-right">
+          <address>
+          </address>
+          <address>
+            <strong>Email Me</strong><br>
+            <a href="mailto:#">contact@lukemelville.com</a>
+          </address>
         </div>
       </div>
-	</section>
+    </div>
+  </section>
 <!-- 	
     <section class="container-fluid" id="section6">
     </section> --> -->
@@ -389,16 +390,16 @@ btbge vid`
             </ul>
           </div> -->
 <!--         </div>
- -->        <!--/row-->
-        <p class="text-center">© Luke Melville 2017
-        </p>
-      </div>
-    </footer>
+-->        <!--/row-->
+<p class="text-center">© Luke Melville 2017
+</p>
+</div>
+</footer>
 
 
-    <div class="scroll-up">
-      <a href="#"><i class="fa fa-angle-up"></i></a>
-    </div>
+<div class="scroll-up">
+  <a href="#"><i class="fa fa-angle-up"></i></a>
+</div>
 
 <!--     <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal" role="dialog" tabindex="-1">
       <div class="modal-dialog">
@@ -406,7 +407,7 @@ btbge vid`
           <div class="modal-header">
             <button aria-hidden="true" class="close" data-dismiss="modal" type="button">×</button>
             <h2  class="text-center"><img id = "loginPic" class="img-circle" src=
-              "/images/firstArrow.png"><br>
+              "images/firstArrow.png"><br>
               Sign In</h2>
             </div>
             <div class="modal-body row">
@@ -440,7 +441,7 @@ btbge vid`
           <div class="modal-dialog">
             <div class= "modal-content" id = "myModalContent2" >
               <div class="modal-header" id = "myModalHeader2">
-                <img class = "img-responsive" src="/portfolio/POCBTBGE/images/snapPOCBTBGE3.png">
+                <img class = "img-responsive" src="/portfolio/POCBTBGEimages/snapPOCBTBGE3.png">
               </div>
               <div class="modal-body row">
                 <div class='embed-container'><iframe id = "trailer" src='https://www.youtube.com/embed//Md_RRtVC3-E' frameborder='0' allowfullscreen></iframe></div>
@@ -456,24 +457,24 @@ btbge vid`
 
 
         <!--scripts loaded here-->
-        <script src="/js/jquery-1.12.1.min.js">
+        <script src="js/jquery-1.12.1.min.js">
         </script>
-        <script src="/js/bootstrap.min.js">
+        <script src="js/bootstrap.min.js">
         </script>
-        <script src="/js/scripts.js">
+        <script src="js/scripts.js">
         </script>
-        <script src="/js/backgroundChanger.js">
+        <script src="js/backgroundChanger.js">
         </script>
-        <script src="/js/paginationScript.js">
+        <script src="js/paginationScript.js">
         </script>
-                    <!-- Google Analytics -->
-            <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-73319555-1', 'auto');
-            ga('send', 'pageview');
-            </script>
+        <!-- Google Analytics -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-73319555-1', 'auto');
+          ga('send', 'pageview');
+        </script>
       </body>
       </html>
