Analytics Tag Test

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123694098-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123694098-1');
+</script>
+
     <!--     TO LOOK AT! - 
     http://daneden.github.io/animate.css/
 http://ionicons.com/
@@ -64,7 +74,7 @@ btbge vid`
         </li>
       </ul>
     </div>
-    
+
   </div>
 </nav>
 <section class="container-fluid" id="section1">
