Localised ABOUT BG

--- a/index.html
+++ b/index.html
@@ -110,18 +110,12 @@ btbge vid`
       </div>
       <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
         <p>Hi I'm Luke! I am a <a target="_blank" href = "http://www.shu.ac.uk/prospectus/course/800/">MComp Games Software Development</a>
-          Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and also Counter Strike: Global offensive, at the moment. <br> My programming skills are primarily based around C++, however i am also proficient in C#, Javascript, PHP, HTML, SQL, Vpython and VB.net. To see some of my work, please visit my Portfolio section. I have included a contact form so feel free to contact me, or add me on steam. If you would like to view any source code, also send me an email.<br>
+          Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and play a lot of Counter Strike: Global offensive at the moment. <br> I am particularly proficient in C++ and C#, and enjoy using Unity and Unreal, however i am also proficient in Javascript, PHP, HTML, SQL, Vpython and VB.net. If you want to see my work, check out my portfolio section. If you would like to view any source code, feel free to drop me an email at
+          <a href="mailto:luke.melville@gmail.com?Subject=I%20Want%20Your%20Code!" target="_top">luke.melville@gmail.com</a>
+          .<br>
           Regards,<br><br>
           <span id = sig>Luke</span></p>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-3 col-md-offset-2 col-lg-3 col-lg-offset-2">
-        <img id = "steam" class = "img-responsive" src='images/Aapio.png' style='border: 1px solid black;'>
-      </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-4 col-lg-4 ">
-        <img  id = "bf3" class = "img-responsive" src="images/AapioBF3.png">
       </div>
     </div>
     <!--/row-->
