--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ btbge vid`
         <li>
           <a data-text="CV" class  = "button-hover"  href="#section4">CV</a>
         </li>
-        <li>
+<!--         <li>
           <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
-        </li>
+        </li> -->
         <li>
           <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
         </li>
@@ -240,7 +240,7 @@ btbge vid`
   </section>
 
 
-  <section id="section5">
+<!--   <section id="section5">
     <div class="container v-center">
       <div class="row">
         <div class="col-md-12">
@@ -288,7 +288,7 @@ btbge vid`
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 <!-- 	
     <section class="container-fluid" id="section6">
     </section> --> -->
