--- a/portfolio/TDS/php/game.html
+++ b/portfolio/TDS/php/game.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>Luke Melville</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/font-awesome.min.css" rel="stylesheet">
-  <link href="/css/animate.min.css" rel="stylesheet">
-  <link href="/css/styles.css" rel="stylesheet">
-  <link href="/css/fonts.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/animate.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
   <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
