--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123694098-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-123694098-1');
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123694098-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-123694098-1');
+  </script>
+
+  <!-- Google Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDQUGroXaxRRWdLL4d6RwPLZFYy6mALq9c",
+    authDomain: "portfoliosite-6ff11.firebaseapp.com",
+    databaseURL: "https://portfoliosite-6ff11.firebaseio.com",
+    projectId: "portfoliosite-6ff11",
+    storageBucket: "portfoliosite-6ff11.appspot.com",
+    messagingSenderId: "614064594078"
+  };
+  firebase.initializeApp(config);
 </script>
+
+
+
 
     <!--     TO LOOK AT! - 
     http://daneden.github.io/animate.css/
@@ -21,9 +42,19 @@ http://ionicons.com/
 http://codepen.io/Jintos/pen/crlxk
 http://www.cleancss.com/php-beautify/
 http://codepen.io/wifeo/pen/qzwkb
-btbge vid`
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed//Md_RRtVC3-E' frameborder='0' allowfullscreen></iframe></div>
 -->
+
+<!-- 
+FOR SCROLL SETTING ACTIVE
+  http://jsfiddle.net/5d922roc/ 
+BOOTSTRAP SHIT
+  https://getbootstrap.com/docs/3.3/components/#navbar
+IONICONS SHIT
+  https://ionicons.com/usage
+
+-->
+
+
 <meta charset="utf-8">
 <title>Luke Melville</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -35,94 +66,106 @@ btbge vid`
 <link href="css/about.css" rel="stylesheet">
 <link href="css/fonts.css" rel="stylesheet">
 <link href="css/hover.css" rel="stylesheet">
+<!-- <link href="css/cliptext.css" rel="stylesheet"> -->
 </head>
 
-<body>
-  <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button class="navbar-toggle" data-target="#navbar-collapsible" data-toggle="collapse" type="button"><span class="sr-only">Toggle
-        navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-      </button> <a class="navbar-brand" href="#">Lm</a>
-    </div>
+<body data-spy="scroll" data-target=".navbar">
 
-    <div class="navbar-collapse collapse" id="navbar-collapsible">
-      <ul class="nav navbar-nav navbar-left">
-        <li>
-          <a data-text="Top" class  = "button-hover" href="#section1">Top</a>
-        </li>
-        <li>
-          <a data-text="About" class  = "button-hover" href="#section2">About</a>
-        </li>
-        <li>
-          <a data-text="Portfolio" class  = "button-hover"  href="#section3">Portfolio</a>
-        </li>
-        <li>
-          <a data-text="CV" class  = "button-hover"  href="#section4">CV</a>
-        </li>
-<!--         <li>
-          <a data-text="Contact" class  = "button-hover"  href="#section5">Contact</a>
-        </li> -->
-        <li>
-          <a data-text="Bottom" class  = "button-hover"  href="#section6">Bottom</a>
-        </li>
-        <li>&nbsp;</li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a data-target="#myModal" data-toggle="modal" href="#"><i class="ion-gear-a"></i></a>
-        </li>
-      </ul>
-    </div>
 
-  </div>
-</nav>
-<section class="container-fluid" id="section1">
-  <div class="v-center">
-    <h1 class="text-center" id="logo">Luke Melville</h1>
-    <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
-    Games Software Developer</h2>
-    <p class="text-center">
-      <br>
-    </p>
-  </div>
-  <a href="#section2">
-    <div class="scroll-down bounceInDown animated">
-      <span><i class="fa fa-angle-down fa-2x"></i></span>
-    </div>
-  </a>
-</section>
-<section class="container-fluid" id="section2">
- <div class="about-me">
-  <div class="row">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-      <h2 class = "elegantshadow">About</h2>
-      <div class="hovereffect">
-        <div class="img-circle img-responsive overlay">
-          <p>
-            <a href="https://www.linkedin.com/in/luke-melville-9aba00118" target = "_blank" rel="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a>
-            <a href="https://www.facebook.com/Lukiemelville" target = "_blank" rel="tooltip" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
-            <a href="https://twitter.com/lukemev" target = "_blank" rel="tooltip" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
-            <a href="https://open.spotify.com/user/aapio" target = "_blank" rel="tooltip" title="Spotify"><i class="fa fa-spotify fa-2x"></i></a>
-          </div>
-          <img id = "aboutPic" class="img-circle img-responsive" src="images/aboutMe.jpg">
-        </div>
+
+  <nav class="navbar navbar-expand-lg navbar-trans fixed-top" id = "navbar-scrollspy">
+    <div class = "container-fluid">
+      <div class = "navbar-header" >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <ion-icon class = "icon-bar" name="menu" size="large"></ion-icon>
+        </button>
+        <a class="navbar-brand" href="#">Lm</a>
       </div>
-      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-        <p>Hi I'm Luke! I am a <a target="_blank" href = "http://www.shu.ac.uk/prospectus/course/800/">MComp Games Software Development</a>
-          Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and play a lot of Counter Strike: Global offensive at the moment. <br> I am particularly proficient in C++ and C#, and enjoy using Unity and Unreal, however i am also proficient in Javascript, PHP, HTML, SQL, Vpython and VB.net. If you want to see my work, check out my portfolio section. If you would like to view any source code, feel free to drop me an email at
-          <a href="mailto:luke.melville@gmail.com?Subject=I%20Want%20Your%20Code!" target="_top">luke.melville@gmail.com</a>
-          .<br>
-          Regards,<br><br>
-          <span id = sig>Luke</span></p>
-        </div>
-      </div>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="nav navbar-nav">
+
+          <li id = "s1li" class = "active">
+            <a data-text="Top" class="nav-link button-hover" href="#section1">Top</a>
+          </li>
+
+          <li id = "s2li">
+            <a data-text="About" class="nav-link button-hover" href="#section2">About</a>
+          </li>
+
+          <li id = "s3li">
+            <a data-text="Portfolio" class="nav-link button-hover" href="#section3">Portfolio</a>
+          </li>
+
+          <li id = "s4li">
+            <a class="nav-link button-hover" href="#section4">CV</a>
+          </li>
+
+        </ul>
+      </div>  
+    </div>  
+  </nav>
+
+
+
+  <section class="container-fluid" id="section1">
+    <div class="v-center">
+      <h1 class="text-center" id="logo">Luke Melville</h1>
+      <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
+      Games Software Developer</h2>
+      <p class="text-center">
+        <br>
+      </p>
     </div>
-    <!--/row-->
+    <a href="#section2">
+      <div class="scroll-down bounceInDown animated">
+        <span><i class="fa fa-angle-down fa-2x"></i></span>
+      </div>
+    </a>
   </section>
 
 
-  <section class="container-fluid" id="section3">
+
+
+  <section class="container-fluid" id="section2">
+   <div class="about-me">
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+        <h2 class = "elegantshadow">About</h2>
+        <div class="hovereffect">
+          <div class="img-circle img-responsive overlay">
+            <p>
+              <a href="https://www.linkedin.com/in/luke-melville-9aba00118" target = "_blank" rel="tooltip" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a>
+              <a href="https://www.facebook.com/Lukiemelville" target = "_blank" rel="tooltip" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a>
+              <a href="https://twitter.com/lukemev" target = "_blank" rel="tooltip" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a>
+              <a href="https://open.spotify.com/user/aapio" target = "_blank" rel="tooltip" title="Spotify"><i class="fa fa-spotify fa-2x"></i></a>
+            </div>
+            <img id = "aboutPic" class="img-circle img-responsive" src="images/aboutMe.jpg">
+          </div>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+          <p>Hello, I'm Luke!<br> I am a <a target="_blank" href = "http://www.shu.ac.uk/prospectus/course/800/">MComp Computer Science for Games</a>
+            Student at Sheffield Hallam University. I like playing and making games, primarily playing on the PC. I am a particularly big fan of Bethesda games, and play a lot of Counter Strike: Global Offensive, and Rimworld at the moment. <br> I am skilled in C++ and C#, and enjoy using Unity and Unreal, and I also working with Javascript, PHP, HTML, SQL, Vpython and VB.net.<br> If you want to see my work, check out my portfolio section, and if you would like to view any source code, feel free to drop me an email at
+            <a href="mailto:luke.melville@gmail.com?Subject=I%20Want%20Your%20Code!" target="_top">luke.melville@gmail.com</a>.<br>
+            Thanks,<br><br>
+            <span id = sig>Luke</span></p>
+          </div>
+        </div>
+      </div>
+      <!--/row-->
+    </section>
+
+
+    <section class="container-fluid" id="section3">
+
+
+
+
+
+
+
+
+
       <!-- <div class="row">
         <div class="mainDisplay">
           <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-2 col-lg-offset-2 col-lg-4">
@@ -289,40 +332,41 @@ btbge vid`
       </div>
     </div>
   </section> -->
-<!-- 	
-    <section class="container-fluid" id="section6">
-    </section> --> -->
-    <section class="container-fluid" id="section6">
-      <ul class="row list-unstyled">
-        <li class="col-md-12 col-xs-12">
-          <h3 class="text-center">Thank you for stopping by!</h3>
-        </li>
-      </ul>
-    </section>
-    <section class="container-fluid" id="section7">
-      <div class="row">
-        <!--fontawesome icons-->
-        <div class="col-sm-1 col-sm-offset-3 col-xs-4 text-center">
-          <i class="fa fa-github fa-4x"></i>
-        </div>
-        <div class="col-sm-1 col-xs-4 text-center">
-          <i class="fa fa-foursquare fa-4x"></i>
-        </div>
-        <div class="col-sm-1 col-xs-4 text-center">
-          <i class="fa fa-pinterest fa-4x"></i>
-        </div>
-        <div class="col-sm-1 col-xs-4 text-center">
-          <i class="fa fa-google-plus fa-4x"></i>
-        </div>
-        <div class="col-sm-1 col-xs-4 text-center">
-          <i class="fa fa-twitter fa-4x"></i>
-        </div>
-        <div class="col-sm-1 col-xs-4 text-center">
-          <i class="fa fa-linkedin-square fa-4x"></i>
-        </div>
+
+  <section class="container-fluid" id="section6">
+    <ul class="row list-unstyled">
+      <li class="col-md-12 col-xs-12">
+        <h3 class="text-center">Thank you for stopping by!</h3>
+      </li>
+    </ul>
+  </section>
+  <section class="container-fluid" id="section7">
+    <div class="row">
+      <!--fontawesome icons-->
+      <div class="col-sm-1 col-sm-offset-3 col-xs-4 text-center">
+        <i class="fa fa-github fa-4x"></i>
       </div>
-    </section>
-    <footer id="footer">
+      <div class="col-sm-1 col-xs-4 text-center">
+        <i class="fa fa-foursquare fa-4x"></i>
+      </div>
+      <div class="col-sm-1 col-xs-4 text-center">
+        <i class="fa fa-pinterest fa-4x"></i>
+      </div>
+      <div class="col-sm-1 col-xs-4 text-center">
+        <i class="fa fa-google-plus fa-4x"></i>
+      </div>
+      <div class="col-sm-1 col-xs-4 text-center">
+        <i class="fa fa-twitter fa-4x"></i>
+      </div>
+      <div class="col-sm-1 col-xs-4 text-center">
+        <i class="fa fa-linkedin-square fa-4x"></i>
+      </div>
+    </div>
+  </section>
+
+
+
+  <footer id="footer">
      <!--  <div class="container">
         <div class="row">
           <div class="col-xs-6 col-sm-6 col-md-3 column">
@@ -395,15 +439,13 @@ btbge vid`
           </div> -->
 <!--         </div>
 -->        <!--/row-->
-<p class="text-center">© Luke Melville 2017
+<p class="text-center">© Luke Melville 2018
 </p>
 </div>
 </footer>
 
 
-<div class="scroll-up">
-  <a href="#"><i class="fa fa-angle-up"></i></a>
-</div>
+
 
 <!--     <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myModal" role="dialog" tabindex="-1">
       <div class="modal-dialog">
@@ -461,24 +503,12 @@ btbge vid`
 
 
         <!--scripts loaded here-->
-        <script src="js/jquery-1.12.1.min.js">
-        </script>
-        <script src="js/bootstrap.min.js">
-        </script>
-        <script src="js/scripts.js">
-        </script>
-        <script src="js/backgroundChanger.js">
-        </script>
-        <script src="js/paginationScript.js">
-        </script>
-        <!-- Google Analytics -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-73319555-1', 'auto');
-          ga('send', 'pageview');
-        </script>
+        <script src="js/jquery-3.3.1.min.js">                           </script>
+        <script src="js/bootstrap.bundle.min.js">                       </script>
+        <script src="js/scripts.js">                                    </script>
+        <script src="js/backgroundChanger.js">                          </script>
+        <script src="js/paginationScript.js">                           </script>
+        <script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
+
       </body>
       </html>
