--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ IONICONS SHIT
           <li id = "s1li" class = "active">
             <a data-text="Top" class="nav-link button-hover" href="#section1">Top</a>
           </li>
-
+<!--
           <li id = "s2li">
             <a data-text="About" class="nav-link button-hover" href="#section2">About</a>
           </li>
@@ -100,7 +100,7 @@ IONICONS SHIT
           <li id = "s4li">
             <a class="nav-link button-hover" href="#section4">CV</a>
           </li>
-
+-->
         </ul>
       </div>  
     </div>  
@@ -113,6 +113,8 @@ IONICONS SHIT
       <h1 class="text-center" id="logo">Luke Melville</h1>
       <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
       Games Software Developer</h2>
+      <h2 class="blackStroke text-center lato animate slideInDown coolvetica">
+      Under re-construction!</h2>
       <p class="text-center">
         <br>
       </p>
@@ -126,7 +128,7 @@ IONICONS SHIT
 
 
 
-
+<!--
   <section class="container-fluid" id="section2">
    <div class="about-me">
     <div class="row">
@@ -152,13 +154,13 @@ IONICONS SHIT
           </div>
         </div>
       </div>
-      <!--/row-->
     </section>
+
 
 
     <section class="container-fluid" id="section3">
 
-
+-->
 
 
 
@@ -264,9 +266,11 @@ IONICONS SHIT
          /row
       </div>
     </container-->    
+    <!--
   </section>
 
-
+-->
+<!-- 
   <section class="container-fluid" id="section4">
     <h1 class="text-center coolvetica elegantshadow">My CV</h1>
     <div class="row">
@@ -281,6 +285,7 @@ IONICONS SHIT
       </div>
     </div>
   </section>
+-->
 
 
 <!--   <section id="section5">
